Report: Literature Review (#27)

--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -138,6 +138,10 @@
     text={entropy},
     description={Measure of uncertainty or randomness in a system, often used in the context of information theory and reinforcement learning to encourage exploration}
 }
+\newglossaryentry{meanvarianceoptimisation}{
+    name=Mean-Variance Optimisation,
+    description={Investment strategy that aims to construct a portfolio of assets that maximises expected return for a given level of risk, or minimises risk for a given level of expected return}
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
@@ -186,3 +190,10 @@
 \newacronym{irx}{IRX}{3-Month Treasury Yield}
 \newacronym{fvx}{FVX}{5-Year Treasury Yield}
 \newacronym{tnx}{TNX}{10-Year Treasury Yield}
+\newacronym{mvo}{MVO}{\Gls{meanvarianceoptimisation}}
+\newacronym{lstm}{LSTM}{Long Short-Term Memory}
+\newacronym{mape}{MAPE}{Mean Absolute Percentage Error}
+\newacronym{pca}{PCA}{Principal Component Analysis}
+\newacronym{djia}{DJIA}{Dow Jones Industrial Average}
+\newacronym{eu}{EU}{European Union}
+\newacronym{saac}{SAAC}{Synchronous Advantage Actor Critic}
