Remove unavailable volatility

--- a/report/appendix/state_representation.tex
+++ b/report/appendix/state_representation.tex
@@ -109,11 +109,9 @@ The following technical indicators are used to represent the state of the financ
 
 The following macroeconomic indicators are used to represent the state of the financial environment. They provide additional context about the market conditions and are calculated based on external data sources:
 \begin{itemize}
-    \item \acrfull{vix}: Measures the market's expectation of future volatility based on options prices.
+    \item \acrfull{vix}: Measures the market's expectation of future volatility based on options prices. This is only available for US markets.
     \begin{itemize}
         \item \acrshort{vix} is calculated using the implied volatility of \acrfull{sp500} options.
-        \item \acrshort{vftse} is calculated using the implied volatility of \acrfull{ftse100} options.
-        \item \acrshort{vstoxx} is calculated using the implied volatility of \acrlong{eurostoxx50} options.
         \item \acrshort{vxd} is calculated using the implied volatility of \acrfull{dw30} options.
     \end{itemize}
     \item Currency index: Captures the impact from the monetary market on the stock market.
