--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -4,7 +4,7 @@
 
 \Gls{algorithmictrading} focuses on the application of analytical methods to automatically execute trading actions based on an algorithm without human intervention. In its early days, the field mainly studied the usage of a computer program to follow a predefined strategy \cite{Lei2020}. Nonetheless, in recent years, algorithmic trading has evolved to a problem in which environment perception entails learning feature representation from highly non-stationary and noisy financial time series data and decision-making requires the algorithm to explore the environment and simultaneously make correct decisions in an online manner without supervision \cite{Ma2021}.
 
-\acrfull{ml} is at an advantage for the task given its capability to learn from historical data and make predictions about the future state of an environment. In the past years, research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Shen2020,Nti2020,Wu2023,Hasan2024}. However, its main disadvantage is the inability to directly deal with trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} would allow the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
+\acrfull{ml} is at an advantage for the task given its capability to learn from historical data and make predictions about the future state of an environment. In the past years, research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Hasan2024,Nti2020,Shen2020,Wu2023}. However, its main disadvantage is the inability to directly deal with trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} would allow the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
 
 Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread adoption in the financial industry remains limited. This is primarily due to following challenges \cite{Cortes2024}:
 \begin{enumerate}
