Surrogate model explainability

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -367,6 +367,12 @@
   url       = {https://arxiv.org/abs/1509.02971v6},
   year      = {2015}
 }
+@misc{LimeTabularExplainer,
+  author  = {Lime},
+  journal = {Documentation},
+  title   = {Lime Tabular Explainer — lime 0.1 documentation},
+  url     = {https://lime-ml.readthedocs.io/en/latest/lime.html#module-lime.lime_tabular}
+}
 @article{Liu2018,
   abstract = {Stock trading strategy plays a crucial role in investment companies. However, it is challenging to obtain optimal strategy in the complex and dynamic stock market. We explore the potential of deep reinforcement learning to optimize stock trading strategy and thus maximize investment return. 30 stocks are selected as our trading stocks and their daily prices are used as the training and trading market environment. We train a deep reinforcement learning agent and obtain an adaptive trading strategy. The agent's performance is evaluated and compared with Dow Jones Industrial Average and the traditional min-variance portfolio allocation strategy. The proposed deep reinforcement learning approach is shown to outperform the two baselines in terms of both the Sharpe ratio and cumulative returns.},
   author   = {Xiao-Yang Liu and Zhuoran Xiong and Shan Zhong and Hongyang Yang and Anwar Walid},
@@ -646,6 +652,12 @@
   title     = {A value for n-person games},
   year      = {1953}
 }
+@misc{ShapTreeExplainer,
+  author  = {SHAP},
+  journal = {Documentation},
+  title   = {shap.TreeExplainer — SHAP documentation},
+  url     = {https://shap.readthedocs.io/en/latest/generated/shap.TreeExplainer.html#shap.TreeExplainer}
+}
 @article{Sharpe1994,
   author  = {William Sharpe},
   journal = {The Journal of Portfolio Management},
@@ -701,6 +713,24 @@
   journal = {Scikit Learn Documentation},
   title   = {5.2. Permutation feature importance — scikit-learn 1.7.1 documentation},
   url     = {https://scikit-learn.org/stable/modules/permutation_importance.html#outline-of-the-permutation-importance-algorithm}
+}
+@misc{sklearnFeatureImportance,
+  author  = {Scikit Learn},
+  journal = {Documentation},
+  title   = {1.11.2.5. Feature importance evaluation — scikit-learn 1.7.1 documentation},
+  url     = {https://scikit-learn.org/stable/modules/ensemble.html#feature-importance-evaluation}
+}
+@misc{sklearnHalvingGridSearch,
+  author  = {Scikit Learn},
+  journal = {Documentation},
+  title   = {HalvingGridSearchCV — scikit-learn 1.7.1 documentation},
+  url     = {https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.HalvingGridSearchCV.html#sklearn.model_selection.HalvingGridSearchCV}
+}
+@misc{sklearnRandomForest,
+  author  = {Scikit Learn},
+  journal = {Documentation},
+  title   = {RandomForestRegressor — scikit-learn documentation},
+  url     = {https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html}
 }
 @article{Strumbelj2011,
   abstract  = {We propose a method for explaining regression models and their predictions for individual instances. The method successfully reveals how individual features influence the model and can be used with any type of regression model in a uniform way. We used different...},
