Direct model explainability

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -643,6 +643,12 @@
   year     = {2019},
   journal  = {arXiv preprint arXiv:1912.10944}
 }
+@misc{ShapKernelExplainer,
+  author  = {SHAP},
+  journal = {Documentation},
+  title   = {shap.KernelExplainer — SHAP documentation},
+  url     = {https://shap.readthedocs.io/en/latest/generated/shap.KernelExplainer.html#shap-kernelexplainer}
+}
 @inbook{Shapley1953,
   author    = {Lloyd Shapley},
   isbn      = {9781400881970},
