--- a/report/contents/methodology.tex
+++ b/report/contents/methodology.tex
@@ -106,3 +106,9 @@ Firstly, feature importance \ref{sec:featureimportance} is built-in for Random F
 Secondly, \acrshort{lime} and \acrshort{shap} are applied to the surrogate model via the predict function to provide local explanations for individual predictions. Both of these techniques provide insights into the model's decisions by perturbing the input data and observing the changes in the output. 
 
 The \acrshort{lime} implementation is done using the \texttt{LimeTabularExplainer} \cite{LimeTabularExplainer}, which is designed to work with tabular data and provides a way to explain individual predictions by approximating the model's behaviour locally with a linear model. Similarly, for \acrshort{shap}, the framework provides a particular implementation for tree-based models, which is used to compute the \acrshort{shap} values efficiently by exploiting the structure of the trees. Consequently, the \texttt{TreeExplainer} \cite{ShapTreeExplainer} is used to compute the \acrshort{shap} values for the surrogate model.
+
+\subsection{Direct Model Explainability} \label{subsec:direct_model_explainability}
+
+On the contrary, since using a surrogate model adds an additional layer of complexity, it may obscure the understanding of the original model's decisions. Therefore, the \acrshort{shap} and \acrshort{lime} techniques are also applied directly to the prediction function of \acrshort{drl} model to interpret its decisions. This approach allows for a more direct interpretation of the model's decision-making process, without the need of a supplementary level. 
+
+For \acrshort{lime}, the same framework as for the proxy model is used, i.e. tabular explainer. However, the prediction function is now obtained from the relevant \acrshort{drl} algorithm. When it comes to \acrshort{shap}, the implementation is done using the \texttt{KernelExplainer} \cite{ShapKernelExplainer}, which is a model-agnostic method that can be used to compute the \acrshort{shap} values for any model.
