Hyper-parameter tuning

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -22,6 +22,7 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{bm}
+\usepackage{multirow}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
@@ -126,5 +127,6 @@
 \appendix
 \include{appendix/drl_algorithms}
 \include{appendix/state_representation}
+\include{appendix/hyperparameter_tuning}
 
 \end{document}
