--- a/report/contents/methodology.tex
+++ b/report/contents/methodology.tex
@@ -100,14 +100,13 @@ The explainability techniques implemented are:
     \item \Gls{featureimportance}
 \end{itemize}
 
-Following the work from de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025}, the implementation of these techniques follows two directions. Firstly, as in their paper, the use of a surrogate model to map the state space to the action space is used as a proxy for the model's decisions. The second direction is to use the \acrshort{shap} and \acrshort{lime} techniques directly on the \acrshort{drl} model to interpret its decisions.
+Following the work from de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025}, the implementation of these techniques follows two directions. First, as in their paper, a surrogate model maps the state space to the action space as a proxy for the model's decisions. The second direction is to use the \acrshort{shap} and \acrshort{lime} techniques directly on the \acrshort{drl} model to interpret its decisions.
 
 \subsection{Surrogate Model Explainability} \label{subsec:surrogate_model_explainability}
 
 The surrogate model is trained to approximate the behaviour of the \acrshort{drl} model by learning from its inputs, the environment representation, and outputs, the portfolio weights. The reason behind using a surrogate model is the complexity of the \acrshort{drl} model and the difficulty in interpreting its decisions directly. 
 
-Given that the action space is continuous, the surrogate model is implemented using a \texttt{RandomForestRegressor} \cite{sklearnRandomForest}, which is a non-parametric model that can capture complex relationships between the inputs and outputs. The model is trained on the state-actions pairs of the test data, which is the object of the explanations. However, since the model has a number of hyper-parameters, it requires careful tuning to achieve optimal performance. Consequently, the decision was taken to use hyperparameter tuning to find the optimal architecture. This was done using 
-\texttt{HalvingGridSearchCV} \cite{sklearnHalvingGridSearch}, which is a method that iteratively narrows down the search space by evaluating a subset of hyper-parameters and discarding the less promising ones. Once the optimal hyper-parameters have been found and the surrogate model has been trained, its prediction function is used as a proxy to interpret the original model's decisions. 
+Given that the action space is continuous, the surrogate model is implemented using a \texttt{RandomForestRegressor} \cite{sklearnRandomForest}, which is a non-parametric model that can capture complex relationships between the inputs and outputs. The model is trained on the state-actions pairs of the test data, which is the object of the explanations. However, since the model has a number of hyper-parameters, it requires careful tuning to achieve optimal performance. Consequently, hyperparameter tuning was used find the optimal architecture using \texttt{HalvingGridSearchCV} \cite{sklearnHalvingGridSearch}, which is a method that iteratively narrows down the search space by evaluating a subset of hyper-parameters and discarding the less promising ones. Once the optimal hyper-parameters have been found and the surrogate model has been trained, its prediction function is used as a proxy to interpret the original model's decisions. 
 
 Firstly, feature importance \ref{sec:featureimportance} is built-in for Random Forest Regressors, and can be easily accessed with the built-in property \texttt{feature\_importances\_} \cite{sklearnFeatureImportance}. This method provides the importance of each feature in the state representation by using a combination of the fraction of the samples a feature contributes to and the mean decrease in impurity.
 
@@ -117,6 +116,6 @@ The \acrshort{lime} implementation is done using the \texttt{LimeTabularExplaine
 
 \subsection{Direct Model Explainability} \label{subsec:direct_model_explainability}
 
-On the contrary, since using a surrogate model adds an additional layer of complexity, it may obscure the understanding of the original model's decisions. Therefore, the \acrshort{shap} and \acrshort{lime} techniques are also applied directly to the prediction function of \acrshort{drl} model to interpret its decisions. This approach allows for a more direct interpretation of the model's decision-making process, without the need of a supplementary level. 
+On the contrary, since using a surrogate model adds an additional layer of complexity, it may obscure the understanding of the original model's decisions. Therefore, the \acrshort{shap} and \acrshort{lime} techniques are also applied directly to the prediction function of the \acrshort{drl} model to interpret its decisions. This approach allows for a more direct interpretation of the model's decision-making process, without the need for a supplementary level. 
 
 For \acrshort{lime}, the same framework as for the proxy model is used, i.e. tabular explainer. However, the prediction function is now obtained from the relevant \acrshort{drl} algorithm. When it comes to \acrshort{shap}, the implementation is done using the \texttt{KernelExplainer} \cite{ShapKernelExplainer}, which is a model-agnostic method that can be used to compute the \acrshort{shap} values for any model.
